Fix T52834: Polyfill2D fails with co-linear edges